# factr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: data_loading_example.py  factor_api_example.py  performance_example.py  quickstart.py  sqlite_example.py
factr/: __init__.py  classifiers.py  custom.py  datasets.py  factors.py  pipeline.py  universe.py
factr/core/: __init__.py  factor.py  scope.py
factr/data/: __init__.py  alignment.py  binding.py  config.py  context.py  loaders.py  sources.py
scripts/: create_sample_data.py
tests/: test_column_fields.py  test_column_name_collision.py  test_column_selection.py  test_core.py  test_correctness_chains.py  test_correctness_edge_cases.py  test_correctness_golden.py  test_correctness_point_in_time.py  test_correctness_scope.py  test_custom.py  test_custom_factor.py  test_data_binding.py  test_data_sources.py  test_dataset_dependencies.py  test_dataset_loading.py  test_datasets.py  test_factors.py  test_new_indicators.py  test_pipeline_factors.py  test_point_in_time.py  test_scope_transition.py  test_sql_source.py  test_universe.py
